# cmake-boilerplate

./: .gitignore  CMakeLists.txt  README.md
include/fizzbuzz/: base.h
src/: CMakeLists.txt  fizzbuzz.cpp  main.cpp
tests/: CMakeLists.txt  fizztests.cpp
